# 20-fft-20-fft

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-benchmarks.sh  build-essential.sh  build-examples.sh  clean-all.sh  install_gnuplot_linux.sh  run-all.sh
HaarDemo/: Demo.cpp  haar1d  (+8 more)
benchmarks/: CMakeLists.txt
benchmarks/fourier_transform/: CMakeLists.txt  dell.py  fourier_transform.cpp  fourier_transform_cuda.cpp  fourier_transform_openmp.cpp  fourier_transform_sequential.cpp  fourier_transform_sequential.py  hp.py  plot_performance.py  thinkpad.py  utils.hpp
benchmarks/fourier_transform/dell/: dell-1D_results_openmp_threads_16_2025-05-25_12-57-14.json  dell-1D_results_openmp_threads_22_2025-05-25_10-24-16.json  dell-1D_results_openmp_threads_2_2025-05-25_13-08-14.json  dell-1D_results_openmp_threads_4_2025-05-25_13-01-19.json  dell-1D_results_openmp_threads_8_2025-05-25_12-59-09.json  dell-1D_results_sequential_2025-05-25_10-19-35.json  dell-2D_results_openmp_threads_16_2025-05-25_13-15-11.json  dell-2D_results_openmp_threads_22_2025-05-25_10-42-51.json  dell-2D_results_openmp_threads_2_2025-05-25_14-19-12.json  dell-2D_results_openmp_threads_4_2025-05-25_13-51-23.json  dell-2D_results_openmp_threads_8_2025-05-25_13-20-48.json  dell-2D_results_sequential_2025-05-25_10-25-58.json  dell-3D_results_openmp_threads_16_2025-05-25_14-31-26.json  dell-3D_results_openmp_threads_22_2025-05-25_11-43-35.json  dell-3D_results_openmp_threads_2_2025-05-25_16-07-27.json  dell-3D_results_openmp_threads_4_2025-05-25_15-37-30.json  dell-3D_results_openmp_threads_8_2025-05-25_15-01-18.json  dell-3D_results_sequential_2025-05-25_11-02-19.json
benchmarks/fourier_transform/hp/: hp-1D_results_openmp_threads_12_2025-05-20_17-30-27.json  hp-1D_results_openmp_threads_2_2025-05-25_12-57-05.json  hp-1D_results_openmp_threads_4_2025-05-25_12-51-23.json  hp-1D_results_openmp_threads_8_2025-05-25_12-14-36.json  hp-1D_results_sequential_2025-05-18_13-18-05.json  hp-2D_results_openmp_threads_12_2025-05-20_17-33-41.json  hp-2D_results_openmp_threads_2_2025-05-25_13-14-52.json  hp-2D_results_openmp_threads_4_2025-05-25_13-08-24.json  hp-2D_results_openmp_threads_8_2025-05-25_12-58-57.json  hp-2D_results_sequential_2025-05-18_13-19-45.json  hp-3D_results_openmp_threads_12_2025-05-20_17-38-20.json  hp-3D_results_openmp_threads_2_2025-05-25_15-01-28.json  hp-3D_results_openmp_threads_4_2025-05-25_14-19-48.json  hp-3D_results_openmp_threads_8_2025-05-25_13-21-06.json  hp-3D_results_sequential_2025-05-18_16-06-44.json
benchmarks/fourier_transform/thinkpad/: thinkpad-1D_results_openmp_threads_2_2025-05-25_15-37-47.json  thinkpad-1D_results_openmp_threads_4_2025-05-25_15-33-57.json  thinkpad-1D_results_openmp_threads_8_2025-05-18_17-13-24.json  thinkpad-1D_results_sequential_2025-05-19_12-07-52.json  thinkpad-2D_results_openmp_threads_2_2025-05-25_15-19-40.json  thinkpad-2D_results_openmp_threads_4_2025-05-25_15-13-23.json  thinkpad-2D_results_openmp_threads_8_2025-05-19_12-41-02.json  thinkpad-2D_results_sequential_2025-05-26_10-21-59.json  thinkpad-3D_results_openmp_threads_2_2025-05-25_14-18-53.json  thinkpad-3D_results_openmp_threads_4_2025-05-25_13-26-36.json  thinkpad-3D_results_openmp_threads_8_2025-05-19_22-47-15.json  thinkpad-3D_results_sequential_2025-05-18_16-06-50.json
examples/: CMakeLists.txt  dct_solver_performance.cpp  fourier_transform_solver.cpp  fourier_transform_solver_image.cpp  fourier_transform_solver_performance.cpp  fourier_transform_solver_video.cpp  fourier_transform_solver_video_rgb.cpp  haar_wavelet_transform.cpp  haar_wavelet_transform_1d.cpp  haar_wavelet_transform_2d.cpp  jpeg_compression.cpp  jpeg_image_compression.cpp  test_haar_1d.py  test_haar_2d.py
examples/resources/: fft_config.json  performance_fft_config.json
src/: CMakeLists.txt  jpeg_compression_demo.cpp  main.cpp  oneD_FFT.h  parallel_FFT.h  parallel_IFFT.h
src/config-loader/: json-configuration-loader.cpp  json-field-handler.cpp
src/config_loader/: base_configuration_loader.hpp  json_configuration_loader.cpp  json_configuration_loader.hpp  json_field_handler.cpp  json_field_handler.hpp
src/discrete-cosine-transform-solver/: discrete-cosine-transform-solver.cpp  discrete-cosine-transform-solver.hpp
src/discrete-cosine-transform-solver/algorithms/: dct.cpp  dct.hpp  dct_openMP.cpp  dct_openMP.hpp  idct.cpp  idct.hpp  idct_openMP.cpp  idct_openMP.hpp
src/discrete-cosine-transform-solver/discrete-cosine-transform/: discrete-cosine-transform.cpp  discrete-cosine-transform.hpp
src/discrete-cosine-transform-solver/inverse-discrete-cosine-transform/: inverse-discrete-cosine-transform.cpp  inverse-discrete-cosine-transform.hpp
src/discrete_cosine_transform/: base_discrete_cosine_transform.cpp  base_discrete_cosine_transform.hpp
src/fourier-transform-solver/: fourier-transform-solver.hpp  parallel-1d-fast-ft.cpp  parallel-1d-inverse-fast-ft.cpp  parallel-2d-fast-ft.cpp  parallel-2d-fast-ft.hpp  sequential-1d-fast-ft.cpp  sequential-1d-inverse-fast-ft.cpp
src/fourier_transform/: base_fourier_transform.hpp
src/jpeg_image_compression/: imageJPEG.cpp  imageJPEG.hpp
src/rle_compressor/: rle_compressor.cpp  rle_compressor.hpp
src/signal-generator/: abstract-signal-generator.hpp  space-domain-signal-generator.cpp  space-domain-signal-generator.hpp  time-domain-signal-generator.cpp  time-domain-signal-generator.hpp
src/signal-saver/: abstract-file-signal-saver.hpp  csv-signal-saver.cpp  csv-signal-saver.hpp
src/signal_generator/: base_signal_generator.hpp  space_domain_signal_generator.cpp  space_domain_signal_generator.hpp  time_domain_signal_generator.cpp  time_domain_signal_generator.hpp
src/signal_processing/: CMakeLists.txt  signal_processing.hpp
src/signal_saver/: base_file_signal_saver.hpp  csv_signal_saver.cpp  csv_signal_saver.hpp
src/utils/: bit-reversal.cpp  bit-reversal.hpp  bit_reversal.cpp  rle_compressor.cpp  rle_compressor.hpp  timestamp.cpp  timestamp.hpp  zigzag_scan.cpp  zigzag_scan.hpp
src/zigzag_scan/: zigzag_scan.cpp  zigzag_scan.hpp
(+164 files in other folders)
